# ChangeLog for net-misc/curl
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/ChangeLog,v 1.119 2008/06/07 04:38:07 dragonheart Exp $

*curl-7.18.2 (07 Jun 2008)

  07 Jun 2008; Daniel Black <dragonheart@gentoo.org> +curl-7.18.2.ebuild:
  version bump

  05 Apr 2008; Daniel Black <dragonheart@gentoo.org> curl-7.17.1.ebuild:
  fix for USE=kerberos/-ldap as per bug #216273 thanks to Graham Russell.

  04 Apr 2008; Daniel Black <dragonheart@gentoo.org> curl-7.18.1.ebuild:
  correct compile fault with heimdal as a gssapi provider - thanks to Doug in
  bug #216096

  02 Apr 2008; Daniel Black <dragonheart@gentoo.org> curl-7.18.1.ebuild:
  hopefully fixed bug #215713 and bug #193149 thanks to Olivier, Rafal and
  teidakankan

*curl-7.18.1 (01 Apr 2008)

  01 Apr 2008; Daniel Black <dragonheart@gentoo.org> -curl-7.17.0.ebuild,
  -curl-7.17.1_pre20071013.ebuild, curl-7.17.1.ebuild, +curl-7.18.1.ebuild:
  added 7.18.1 which fixes bugs #210295, #204130, #209421, #206566 and part of
  bug #207653. 7.17.1 has fixes from bug #206566. Thanks to Daniel Stenberg,
  Micha Kiedrowicz, Olivier Dole, and Fabrice Bacchella. Cleaned out some old
  versions too

  10 Feb 2008; Tobias Scherbaum <dertobi123@gentoo.org> curl-7.17.1.ebuild:
  ppc stable, bug #202891

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> curl-7.17.1.ebuild:
  Stable on ppc64

  23 Jan 2008; Raúl Porcel <armin76@gentoo.org> curl-7.17.1.ebuild:
  alpha/ia64/sparc/x86 stable

  22 Jan 2008; Jeroen Roovers <jer@gentoo.org> curl-7.17.1.ebuild:
  Stable for HPPA (maybe bug #202891).

  26 Dec 2007; Doug Klima <cardoe@gentoo.org> curl-7.17.1.ebuild:
  amd64 stable wrt bug#202891

*curl-7.17.1 (12 Nov 2007)

  12 Nov 2007; Daniel Black <dragonheart@gentoo.org>
  +files/curl-7.17.1-null-handler-segfault.patch, +curl-7.17.1.ebuild:
  version bump + patch thanks to Robin - bug #198931
