@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/curl-7.18.2.ebuild,v 1.1 2008/06/07 04:38:07 dragonheart Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/curl-7.18.2.ebuild,v 1.2 2008/06/07 11:25:30 dragonheart Exp $
 
 EAPI="prefix"
 
@@ -47,9 +47,6 @@ src_unpack() {
 	unpack ${A}
 	cd "${S}"
 	epatch "${FILESDIR}"/curl-7.17.0-strip-ldflags.patch
-	# below: bug #216096
-	sed -i -e 's:gssapi/gssapi.h:gssapi/gssapi_generic.h:g' configure.ac
-	eautoreconf
 }
 
 src_compile() {
